Fix nav flickering

--- a/assets/css/lsx-rtl.css
+++ b/assets/css/lsx-rtl.css
@@ -286,7 +286,8 @@ figure { max-width: 100%; }
 
 @media (min-width: 768px) and (max-width: 1199px) { #masthead .wrapper-toggle, #masthead .primary-navbar { margin-right: -30px; margin-left: -30px; width: calc(100% + 60px); } }
 
-@media (min-width: 1200px) { #masthead .mobile-menu-title { display: none; }
+@media (min-width: 1200px) { #masthead { -webkit-backface-visibility: hidden; backface-visibility: hidden; }
+  #masthead .mobile-menu-title { display: none; }
   #masthead .primary-navbar { -ms-flex-item-align: stretch; align-self: stretch; display: -webkit-box !important; display: -ms-flexbox !important; display: flex !important; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -ms-flex-positive: 1; flex-grow: 1; margin-right: 100px; padding: 0; position: relative; }
   .header-expanded #masthead .primary-navbar, .header-central #masthead .primary-navbar { margin-right: 0; min-height: 60px; }
   #masthead .primary-navbar > .nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; height: 100%; position: relative; }
